<resources>
    <string name="app_name">FitMeNow</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_acc">Create Account</string>
    <string name="already_member_login">Already a member? Login</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign">Not a member? Sign up</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="password_validation_message">between 4 and 10 alphanumeric characters</string>
    <string name="name_validation_message">at least 3 characters</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="application">Application</string>
    <string name="training">Training</string>
    <string name="training_progress">Training Progress</string>
    <string name="workout_plans">Workout Plans</string>
    <string name="progress_photos">Progress Photos</string>
</resources>
